[tool.poetry]
name = "ai-agents-playground"
version = "0.1.0"
description = ""
authors = ["Julian Lopez <jlopezsa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.1.0"
langchain-openai = "^0.3.17"
langgraph = "^0.4.5"
colorlog = "^6.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
